# locate-py

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/locate_py/: cli.py
src/locatepy/: cli.py  mcp.py
tests/: conftest.py  test_cli.py  test_mcp.py
