[project]
name = "locate-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
locate = "main:main"

[dependency-groups]
dev = ["ruff>=0.15.8", "ty>=0.0.26"]

[tool.uv]
exclude-newer = "8 days"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "COM812", # conflicts with formatter
    "D",
    "T201",
    "TRY003",
    "PTH",
    "EM101",
    "EM102",
]
