[project]
name = "locatepy"
version = "0.1.0"
description = "Locate files and directories instantly with a sqlite-based index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[project.scripts]
locatepy = "locatepy.cli:main"
locatepy-mcp = "locatepy.mcp:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["locatepy"]

[tool.uv]
exclude-newer = "8 days"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # conflicts with D211
    "D213",   # conflicts with D212
    "COM812", # conflicts with formatter
    "D",
    "T201",
    "TRY003",
    "PTH",
    "EM101",
    "EM102",
]
